--- a/.ebextensions/python.conf
+++ b/.ebextensions/python.conf
@@ -1,24 +1,3 @@
-container_commands:
-  01_migrate:
-    command: "python manage.py migrate"
-    leader_only: true
-  02_collectstatic:
-    command: "python manage.py collectstatic --noinput"
-  03_createsu:
-    command: "python manage.py createsu"
-    leader_only: true
-  04_wsgipass:
-    command: 'echo "WSGIPassAuthorization On" >> ../wsgi.conf'
-
-
 option_settings:
-  "aws:elasticbeanstalk:application:environment":
-    DJANGO_SETTINGS_MODULE: "awsebs.settings"
-    PYTHONPATH: "$PYTHONPATH"
-  "aws:elasticbeanstalk:container:python":
-    WSGIPath: "awsebs/wsgi.py"
-    StaticFiles: "/static/=www/static/"
-
-packages:
-  yum:
-    postgresql95-devel: []
+  aws:elasticbeanstalk:container:python:
+    WSGIPath: awsebs.wsgi:application
